# quant-research-app

./: .env.example  .gitignore  Dockerfile  MODEL_CARD.md  Makefile  README.md  README_EOR.md  ai_logs.jsonl  chaos_runner.py  check_db.py  complexity_api.py  create_db.py  cvar_engine.py  dash_explain.py  docker-compose.yml  env_multi.py  esg_tilt_optimiser.py  feature_store.py  k8s_drain_hook.py  oauth_server.py  privacy_tracker.py  pyproject.toml  pytest.ini  requirements.txt  rl_env.py  rollback_controller.py  settlement_bridge.ts  slo.yaml  tmp_env.parquet  train_marl.py  train_ppo.py  webrtc_widget.js
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
aiops/: drift_monitor.py  predictor.py
alt_data/: __init__.py  sec_filings.py  trends.py
api/: publisher.py
automl/: pipeline.py
backtester/: core.py
chaos/: experiments.yaml
climate/: parse_ngfs.py
code_risk_extension/: extension.js  package.json
cpp/: CMakeLists.txt
dash/: scenario_ui.py
dash_app/: app.py
data/: bad_tick_filter.py
data_prep/: __init__.py  yfinance_utils.py
docs/: ARCHITECTURE.md  architecture.puml
edge/: Dockerfile  gateway.rs
engine/: backtest.py  fidelity.md
esg/: fetch_scores.py
explain/: shap_utils.py
factors/: bond_duration.py  dividend_yield.py  fed_rates.py  fx_carry.py  fx_ppp.py  momentum.py  quality.py  value.py  volatility.py
federated/: start_grid.py
finops/: Dockerfile  cost_alert.py  cost_monitor_lambda.py
grafana/: dashboard.json
infra/: aws_eks.tf  data_residency.tf
integrations/: canonical_schema.json  pershing.py
(+116 files in other folders)
